AC_SUBST(TARGET)

dnl Process this file with autoconf to produce a configure script.
AC_INIT(statusq.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_CANONICAL_SYSTEM

dnl Checks for libraries.
case "$target_os" in
    mingw32)
    LIBS="-lws2_32  $LIBS"
    ;;
    unix | linux | *posix*)
    AC_CHECK_LIB(xnet, socket)
    AC_CHECK_LIB(socket, socket)
    AC_CHECK_LIB(resolv, inet_aton)
    ;;
esac

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(stdint.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_TYPE(uint8_t, [AC_DEFINE(my_uint8_t, uint8_t)], [AC_CHECK_TYPE(u_int8_t, [AC_DEFINE(my_uint8_t, u_int8_t)])])
AC_CHECK_TYPE(uint16_t, [AC_DEFINE(my_uint16_t, uint16_t)], [AC_CHECK_TYPE(u_int16_t, [AC_DEFINE(my_uint16_t, u_int16_t)])])
AC_CHECK_TYPE(uint32_t, [AC_DEFINE(my_uint32_t, uint32_t)], [AC_CHECK_TYPE(u_int32_t, [AC_DEFINE(my_uint32_t, u_int32_t)])])


AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(snprintf inet_aton socket)

case "$target_os" in
    mingw32 | cygwin)
    AC_DEFINE(WINDOWS)
    TARGET=nbtscan.exe
    ;;
    unix | linux)
    AC_DEFINE(UNIX)
    BINDIR=$prefix/bin
    TARGET=nbtscan
    ;;
esac

AC_SUBST(BINDIR)

AC_OUTPUT(Makefile)
